<resources>
    <string name="app_name">FinalExamPetersjl</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="logout">Logout</string>
    <string name="default_state">Active, last guesser was name</string>
    <string name="hangman_picture">Hangman picture</string>
    <string name="default_guesses">Guesses:\nalphabet</string>
    <string name="default_word">Word: hangman</string>
    <string name="hint_guess">Guess a letter</string>
    <string name="default_hidden_word">han****</string>
    <string name="default_card_guesses">Guesses: alphabet</string>
    <string name="default_creator">Created by name</string>
    <string name="default_last_guess">Last guesser was name</string>
    <string name="sign_in">Sign In</string>
    <string name="app_title">Collaborative\nHangman</string>
    <string name="secret_word">Secret word</string>
</resources>