<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <TextView
        android:id="@+id/detail_game_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_state"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/detail_image"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/hangman0"
            android:contentDescription="@string/hangman_picture" />

        <TextView
            android:id="@+id/detail_guesses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingLeft="12dp"
            android:text="@string/default_guesses"
            android:textSize="24sp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

    </LinearLayout>

    <TextView
        android:id="@+id/detail_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_word"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/detail_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_guess"
        android:textSize="24sp"
        android:autofillHints=""
        android:inputType="text" />


</LinearLayout>