<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_card"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="4dp">

        <ImageView
            android:id="@+id/card_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/hangman0"
            android:contentDescription="@string/hangman_picture"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            tools:ignore="RtlHardcoded">

            <TextView
                android:id="@+id/card_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_hidden_word"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/card_guesses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_card_guesses"/>

            <TextView
                android:id="@+id/card_creator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_creator"/>

            <TextView
                android:id="@+id/card_last_guess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_last_guess"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>